--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,17 +1,29 @@
 name: Metrics
+
 on:
-  # Schedule daily updates
-  schedule: [{cron: "*/10 * * * *"}]
-  # (optional) Run workflow manually
+  schedule:
+    - cron: "*/10 * * * *"
+  push:
+    branches:
+      - main
+      - master
   workflow_dispatch:
-  # (optional) Run workflow when pushing on master/main
-  push: {branches: ["master", "main"]}
+
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
+
     steps:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+
+          user: gtsvetanov
+          template: classic
+          base: activity, repositories
+          config_animated: yes
+          config_timezone: Europe/Sofia
+          plugin_languages: yes
+          plugin_languages_colors: github
+          plugin_languages_threshold: 0.2%
