CHANGE: Change metrics

--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -20,5 +20,6 @@ jobs:
           config_animated: yes
           config_timezone: Europe/Sofia
           plugin_languages: yes
-          plugin_languages_colors: github
+          plugin_languages_recent_load: 1000
+          plugin_languages_recent_days: 365
           plugin_languages_threshold: 0.2%
